# inference_results_v1.1

./: README.md
closed/Alibaba/: Makefile  README.md  summary.csv
closed/Alibaba/code/: README.md  main.py
closed/Alibaba/configs/: configuration.py
closed/Alibaba/data_maps/: README.md
closed/Alibaba/docker/: Dockerfile.aarch64  Dockerfile.x86_64  requirements.aarch64
closed/Alibaba/documentation/: FAQ.md  calibration.md  commands.md
closed/Alibaba/results/: submission_checker_log.txt
closed/Alibaba/scripts/: build_triton_cpu_libs.sh  generate_system_descriptions.py  launch_heterogeneous_mig.py  requirements_xavier.txt  update_results.py  utils.py
closed/Alibaba/systems/: A100-SXM-80GBx1_TRT.json  A10x1_TRT.json  T4x1_TRT.json
closed/Centaur Technology/: README.md
closed/Centaur Technology/docs/: Measurements.md  README.md
closed/Centaur Technology/results/: submission_checker_log.txt
closed/Centaur Technology/systems/: Centaur-AIC-2.0GHz.json  Centaur-AIC-2.5GHz.json
closed/Dell/: README.md  calibration.md
closed/Dell/documentation/: calibration_NVIDIA_GPU.md
closed/Edgecortix/: README.md  calibrate_tensorflow_model.py  calibration.md
closed/Fujitsu/: Makefile  README.md
closed/FuriosaAI/: README.md  calibration.md  submission_checklist.md
closed/GIGABYTE/: Makefile  README.md  README_Triton_CPU.md  results_metadata.json
closed/HPE/: Makefile  README.md
closed/Inspur/: Makefile  README.md
closed/Intel/code/bert-99/pytorch-cpu/mlperf_plugins/: .gitmodules  CMakeLists.txt  README.md  _C.py
closed/Intel/code/bert-99/pytorch-cpu/mlperf_plugins/cmake/: blas.cmake
closed/Intel/code/bert-99/pytorch-cpu/mlperf_plugins/cmake/Modules/: FindOpenMP.cmake
closed/Intel/code/bert-99/pytorch-cpu/mlperf_plugins/csrc/: el_common_intrin.hpp  i_gelu_tpp.cpp  i_gelu_tpp.hpp  i_layernorm_tpp.cpp  i_layernorm_tpp.hpp  i_softmax_tpp.cpp  i_softmax_tpp.hpp  init.cpp  linear.cpp  normalization.cpp
closed/Krai/: calibration.md
closed/LTechKorea/: Makefile  README.md  build-workflow.md  results_metadata.json  run-submission.sh  run_arg.txt
closed/Lenovo/: Makefile  README.md  README_Triton_CPU.md  calibration.md
closed/Mobilint/: README.md
closed/NVIDIA/: Makefile  README.md  results_metadata.json
closed/Nettrix/: Makefile  Readme.txt
closed/Qualcomm/: calibration.md
closed/fujitsu-calibration/: README.md
open/Dell/: Makefile  NVIDIA_README.md  README.md
open/Edgecortix/: README.md
(+19986 files in other folders)
